- Fixed/Added: Verification in sheetSyncSize function, if is stretched vertically (initialized with height = 100%) , doesn't set any height. - Fixed: Print function - when function called from not user's action, the browsers will block the popup and ask the permissions, and variable will be null. - Added: ToggleFullScreen fly button - without menu's you can't turn off the full screen mode

--- a/jquery.sheet.css
+++ b/jquery.sheet.css
@@ -372,6 +372,24 @@
 	position: fixed;
 	top: expression(eval(document.body.scrollTop) + "px");
 	left: expression(eval(document.body.scrollLeft) + "px");
+	z-index: 99999 !important;
+}
+
+.jSFullScreenToggleBtn{
+	width: 32px;
+	height: 32px;
+	position: absolute;
+	bottom: 40px;
+	right: 20px;
+	background: #FFF url("images/toggle_full_screen.png") no-repeat center center;
+	z-index: 99999;
+	cursor: pointer;	
+}
+
+.jSFullScreenToggleBtn-hover{
+	-moz-box-shadow: 0 0 10px 0 #439FE6;
+	-webkit-box-shadow: 0 0 10px 0 #439FE6;
+	box-shadow: 0 0 10px 0 #439FE6;
 }
 
 .jSFullScreen > .ui-resizable-handle {
